--- a/pom.xml
+++ b/pom.xml
@@ -32,6 +32,11 @@
       <scope>provided</scope>
     </dependency>
     <dependency>
+      <groupId>org.drools</groupId>
+      <artifactId>drools-scenario-simulation-backend</artifactId>
+      <version>7.52.0.Final-redhat-00008</version>
+    </dependency>
+    <dependency>
       <groupId>junit</groupId>
       <artifactId>junit</artifactId>
       <version>4.12</version>
