--- a/templates/template-create.env
+++ b/templates/template-create.env
@@ -4,8 +4,8 @@ CREDENTIALS_SECRET="credentials"
 KIE_SERVER_HTTPS_SECRET="https-keystore"
 
 # CAN BE MODIFIEC
-KIE_SERVER_CONTAINER_DEPLOYMENT="IterationDemo_1.0.0-SNAPSHOT=com.myspace:IterationDemo:1.0.0-SNAPSHOT"
-SOURCE_REPOSITORY_URL="https://github.com/JairoLedezma/sample-dmn-iteration.git"
+KIE_SERVER_CONTAINER_DEPLOYMENT="traffic-violation_1.0.0-SNAPSHOT=traffic-violation:traffic-violation:1.0.0-SNAPSHOT"
+SOURCE_REPOSITORY_URL="https://github.com/BeidaL/Traffic-Violation.git"
 SOURCE_REPOSITORY_REF="master"
 CONTEXT_DIR=""
 KIE_SERVER_CPU_LIMIT="2"
