--- a/templates/template-create.env
+++ b/templates/template-create.env
@@ -1,5 +1,5 @@
 # CREATE ONCE
-APPLICATION_NAME="kie-server"
+APPLICATION_NAME="traffic-violation"
 CREDENTIALS_SECRET="credentials"
 KIE_SERVER_HTTPS_SECRET="https-keystore"
 
